# diploma-project

./: .gitignore  Documentatie Licenta.docx  Nitu_Vlad_Nicolae_prezentare.pptx  README.md
NS3/ns-allinone-3.37/ns-3.37/: .lock-ns3_linux_build  .lock-ns3_win32_build  ns3
NS3/ns-allinone-3.37/ns-3.37/examples/tutorial/: first.cc
NS3/ns-allinone-3.37/ns-3.37/scratch/: alg1.cc  test.cc  tof.cc  tof.h  tof_example.cc
NS3/ns-allinone-3.37/ns-3.37/src/: CMakeLists.txt
NS3/ns-allinone-3.37/ns-3.37/src/test/: CMakeLists.txt
NS3/ns-allinone-3.37/ns-3.37/utils/: CMakeLists.txt
Simulator/: output.txt  pom.xml  script.py
Simulator/src/main/java/: module-info.java
Simulator/src/main/java/utcn/licenta/simulator/: MainApplication.java
Simulator/src/main/java/utcn/licenta/simulator/controllers/: ComputeController.java  MainController.java
Simulator/src/main/java/utcn/licenta/simulator/models/: Device.java  Point.java
Simulator/src/main/java/utcn/licenta/simulator/services/: AreaCanvasService.java  TextWriterService.java
Simulator/src/main/resources/utcn/licenta/simulator/: computePanel.fxml  view.fxml
